# agi-arc

./: .env.example  .gitignore  .gitmodules  KAGGLE.md  README.md  arc3-agi-arc-submission.ipynb  arc3-local-vlm-capability-check.ipynb  arc3-sample-submission-just-explore.ipynb  arc3-vlm-capability-check.ipynb  arc3-vlm-input-probe.ipynb  pyproject.toml  submit-arc-vlm.ipynb  submit-arc.ipynb  vlm-test (5).ipynb  vlm_policy_runner.py  vlm_policy_runner_scorecard.py  vlm_policy_runner_scorecard_notebookload.py  vlm_policy_runner_scorecard_qwen3fix.py
ms00/: metadata.json  ms00.py
scripts/: analyze_environment_sources.py  bootstrap.sh  inspect_recording_jsonl.py  kaggle_competition_submission.py  kaggle_local_llm_ls20.py  kaggle_offline_eval_agent.py  kaggle_online_ls20.py  kaggle_scorecard.py  kaggle_vlm_eval_agent.py
tests/: test_action_semantics.py  test_analyze_environment_sources.py  test_arcade_offline.py  test_coordinate_policy.py  test_experiments.py  test_exploration_pressure.py  test_external_reasoners.py  test_general_reasoning_signals.py  test_llm_ranking.py  test_mock_agent.py  test_navigation_blueprint.py  test_official_agent.py  test_offline_eval.py  test_planner_quality.py  test_recording_inspector.py  test_refinement_controller.py  test_reset_like_actions.py  test_revert_actions.py  test_safety_shield.py  test_scene_blueprint.py  test_scene_delta.py  test_state_lifter.py  test_terminal_avoidance.py  test_vlm_session.py  test_world_model_hypotheses.py
vlm-agi/: README.md  config.py  grid.py  main.py  model.py  prompts.py  runtime.py  scene_probe.py  (+1 more)
(+72 files in other folders)
