[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agi3-starter"
version = "0.1.0"
description = "Starter scaffold for ARC-AGI-3 research agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
arc = ["arc-agi>=0.9.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
